# crewai

./: README.md
college search/: README.md  pyproject.toml
college search/src/could_you_please_clarify_if_this_chat_relates_to_a_crew_automation_use_case/: crew.py  main.py
college search/src/could_you_please_clarify_if_this_chat_relates_to_a_crew_automation_use_case/config/: agents.yaml  tasks.yaml
